styles/style.css
html {
  overflow: hidden;
}

body {
  background-image: url("../images/atl-logo.png");
  background-size: 100% 100vh;
  background-repeat: no-repeat;
  background-attachment: fixed;
  backdrop-filter: blur(10px);
  width: 100vw;
  height: 100vh;
  margin: 0;
  padding: 0;
}

.player-container {
  max-width: 400px;
  margin: auto;
  padding: 20px;
  border: 1px solid #ccc;
  border-radius: 10px;
  background-color: #f9f9f9;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
}
.main-section {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.player-header {
  text-align: center;
}

.track-title {
  font-size: 1.5em;
  margin: 0;
}

.track-artist {
  font-size: 1.2em;
  margin: 0;
}

.player-controls {
  text-align: center;
  margin: 20px 0;
}

.player-controls button {
  font-size: 2em;
  margin: 0 10px;
  padding: 10px 20px;
  border: none;
  cursor: pointer;
  border-radius: 10px;
}

.progress-bar-container {
  width: 100%;
  height: 10px;
  background-color: #ddd;
  border-radius: 5px;
}

#progress-bar {
  width: 0;
  height: 100%;
  background-color: #4caf50;
  border-radius: 5px;
}

.time-indicator {
  display: flex;
  justify-content: space-between;
  margin-top: 10px;
}

.footer {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 2vh;
}

.footer a {
  margin: 0 10px;
  text-decoration: none;
}

.footer-text {
  margin: 0 10px;
  font-family: "Mooli", sans-serif;
}

.cover-image {
  width: 350px;
  height: 350px;
}

.logo-image {
  width: 100px;
  height: 100px;
}

.footer-items {
  background-color: rgb(255, 255, 255);
  border-radius: 10px;
}

.year {
  font-size: 15px;
}

.contact-details {
  color: #030303;
  font-size: 25px;
  padding: auto;
}

